kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-api-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-api-app
  template:
    metadata:
      labels:
        app: chat-api-app
    spec:
      containers:
        - name: chat-api-app
          image: kub-chat-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 7777
          resources:
            limits:
              cpu: 1
