kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-api-app-service
spec:
  type: LoadBalancer
  ports:
  - port: 7777
    targetPort: 7777
    protocol: TCP
  selector:
    app: chat-api-app
