kubernetes/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-ui-app-service
spec:
  type: LoadBalancer
  ports:
  - port: 7778
    targetPort: 7778
    protocol: TCP
  selector:
    app: chat-ui-app
