kubernetes/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-ui-app-service
                port:
                  number: 7778
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: chat-api-app-service
                port:
                  number: 7777
